--- a/tools/gyp/v8_base_pin.vcproj
+++ b/tools/gyp/v8_base_pin.vcproj
@@ -118,7 +118,7 @@
 				EnableIntrinsicFunctions="false"
 				FavorSizeOrSpeed="0"
 				OmitFramePointers="false"
-				AdditionalIncludeDirectories="..\..\src"
+				AdditionalIncludeDirectories="..\..\src;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\source\include;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\source\include\gen;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\source\tools\InstLib;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\extras\xed2-ia32\include;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\extras\components\include"
 				PreprocessorDefinitions="&quot;_CRT_SECURE_NO_DEPRECATE&quot;;&quot;_CRT_NONSTDC_NO_DEPRECATE&quot;;&quot;ENABLE_DEBUGGER_SUPPORT&quot;;&quot;V8_TARGET_ARCH_IA32&quot;;&quot;WIN32&quot;;&quot;BUILDING_V8_SHARED&quot;;&quot;V8_SHARED&quot;;TARGET_WINDOWS;BIGARRAY_MULTIPLIER=1;USING_XED;HOST_IA32;TARGET_IA32;_CRT_SECURE_NO_DEPRECATE;_SECURE_SCL=0"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -131,7 +131,7 @@
 				WarningLevel="3"
 				WarnAsError="true"
 				Detect64BitPortabilityProblems="false"
-				DebugInformationFormat="4"
+				DebugInformationFormat="3"
 				DisableSpecificWarnings="4355;4800;4351"
 			/>
 			<Tool
@@ -148,9 +148,9 @@
 			<Tool
 				Name="VCLibrarianTool"
 				AdditionalOptions="/ignore:4221"
-				AdditionalDependencies="pin.lib libxed.lib libcpmt.lib libcmt.lib pinvm.lib &quot;..\..\build\release\pin_threading.lib&quot; kernel32.lib ntdll-32.lib $(NOINHERIT)"
+				AdditionalDependencies="pin.lib libxed.lib libcpmt.lib libcmt.lib pinvm.lib $(OutDir)\pin_threading.lib kernel32.lib ntdll-32.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)\lib\$(ProjectName).lib"
-				AdditionalLibraryDirectories="&quot;C:\pet\pin-2.11-49306-msvc9-ia32_intel64-windows\ia32\lib&quot;;&quot;C:\pet\pin-2.11-49306-msvc9-ia32_intel64-windows\ia32\lib-ext&quot;;&quot;C:\pet\pin-2.11-49306-msvc9-ia32_intel64-windows\extras\xed2-ia32\lib&quot;"
+				AdditionalLibraryDirectories="..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\ia32\lib;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\ia32\lib-ext;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\extras\xed2-ia32\lib"
 				IgnoreAllDefaultLibraries="true"
 			/>
 			<Tool
