replaced map::find logic for finding the per-thread context to a PIN Tls key.
Also the context destruction is handled through the TLS_KEY destructor callback.
Changed all PIN_THREAD_UID to THREADID to support TLS management more transparently (there's no PIN_ThreadUid_to_ThreadId function).
Fixed CreateThread return "handle" to return 0 if SpawnThread returns INVALID_THREADID, following the tradition of the original WINAPI.
Fixed v8_base_pin.vcproj file to include the pin_threading lib from its new location.
Added more housekeeping on context's manager exit (DeinitializePinContexts() )

--- a/tools/gyp/v8_base_pin.vcproj
+++ b/tools/gyp/v8_base_pin.vcproj
@@ -148,7 +148,7 @@
 			<Tool
 				Name="VCLibrarianTool"
 				AdditionalOptions="/ignore:4221"
-				AdditionalDependencies="pin.lib libxed.lib libcpmt.lib libcmt.lib pinvm.lib $(OutDir)\pin_threading.lib kernel32.lib ntdll-32.lib $(NOINHERIT)"
+				AdditionalDependencies="pin.lib libxed.lib libcpmt.lib libcmt.lib pinvm.lib $(OutDir)\lib\pin_threading.lib kernel32.lib ntdll-32.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)\lib\$(ProjectName).lib"
 				AdditionalLibraryDirectories="..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\ia32\lib;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\ia32\lib-ext;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\extras\xed2-ia32\lib"
 				IgnoreAllDefaultLibraries="true"
