fixed race condition in the Context Manager initialization. Added a v8 Isolate per context created. Added a default context (over the default isolate) to run all notification and instrumentation functions. Separated functions in several files to easy the administration.
Accoding to PIN documentation, instrumentation callbacks are serialized using an internal lock (VM Lock) so we don't need multiple contexts (nor preemption) in those cases, as they wont be run in parallel anyway.
Analysis and replacement functions do need locking, thus I'll provide a separate isolate per application thread, which also means I dont need to do any locking as all isolates can run simultaneously without any data sharing.
Of course I need to provide some data sharing capabilities from inside the scripts, but I'll lock those from C++ in such a way that it should be transparent to the javascript users.

--- a/tools/gyp/v8.vcproj
+++ b/tools/gyp/v8.vcproj
@@ -217,11 +217,23 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\src\pin-notifications.cc"
+						>
+					</File>
+					<File
+						RelativePath="..\..\src\pin-utils.cc"
+						>
+					</File>
+					<File
 						RelativePath="..\..\src\pintool.h"
 						>
 					</File>
 					<File
 						RelativePath="..\..\src\v8dll-main.cc"
+						>
+					</File>
+					<File
+						RelativePath="..\..\src\v8dll-main.h"
 						>
 					</File>
 				</Filter>
