changed all context and context manager concepts to classes and proper data structures isolation.
it was about time to actually start writing C++ code.

--- a/tools/gyp/v8.vcproj
+++ b/tools/gyp/v8.vcproj
@@ -217,6 +217,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\src\pin-contexts.cc"
+						>
+					</File>
+					<File
 						RelativePath="..\..\src\pin-notifications.cc"
 						>
 					</File>
