changes to support adding the PIN API calls from JS.
The idea is to use highly optimized JIT calls (not common runtime calls) to avoid as much code as possible. I might end up implementing functions on lithium assembler too if needed.

all functions that can be inlined should be defined (in macroassembler) on inlined-pin.h and inlined_impl-pin.h.
all runtime functions (regular c++ functions that can do pretty much anything, including calling APIs that can trigger the GC) must be defined in runtime-pin.cc|h.

--- a/tools/gyp/v8_base.vcproj
+++ b/tools/gyp/v8_base.vcproj
@@ -946,6 +946,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\src\runtime-pin.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\src\runtime-profiler.cc"
 						>
 					</File>
