slowly starting to support the d8 debugger for the user interaction with the debugged process.

--- a/src/d8.vcproj
+++ b/src/d8.vcproj
@@ -1,1 +1,218 @@
-<?xml version="1.0" encoding="Windows-1252"?><VisualStudioProject Keyword="Win32Proj" Name="d8" ProjectGUID="{5DE3F6EE-47C8-CB26-B031-F8CC002701CA}" ProjectType="Visual C++" RootNamespace="d8" Version="9.00"><Platforms><Platform Name="Win32"/></Platforms><ToolFiles/><Configurations><Configuration ConfigurationType="1" IntermediateDirectory="$(ConfigurationName)\obj\$(ProjectName)" Name="Debug|Win32" OutputDirectory="$(SolutionDir)$(ConfigurationName)"><Tool AdditionalIncludeDirectories="..\src;..\include" AdditionalOptions="/MP" BufferSecurityCheck="true" DebugInformationFormat="3" Detect64BitPortabilityProblems="false" DisableSpecificWarnings="4355;4800" EnableFunctionLevelLinking="true" ExceptionHandling="1" MinimalRebuild="false" Name="VCCLCompilerTool" Optimization="0" PreprocessorDefinitions="&quot;_CRT_SECURE_NO_DEPRECATE&quot;;&quot;_CRT_NONSTDC_NO_DEPRECATE&quot;;&quot;ENABLE_DEBUGGER_SUPPORT&quot;;&quot;V8_TARGET_ARCH_IA32&quot;;&quot;WIN32&quot;;&quot;V8_SHARED&quot;;&quot;USING_V8_SHARED&quot;;&quot;DEBUG&quot;;&quot;ENABLE_DISASSEMBLER&quot;;&quot;V8_ENABLE_CHECKS&quot;;&quot;OBJECT_PRINT&quot;" ProgramDataBaseFileName="$(IntDir)\$(ProjectName)\vc80.pdb" RuntimeLibrary="3" RuntimeTypeInfo="false" WarnAsError="true" WarningLevel="3"/><Tool AdditionalIncludeDirectories="..\src;..\include" Name="VCResourceCompilerTool" PreprocessorDefinitions="&quot;_CRT_SECURE_NO_DEPRECATE&quot;;&quot;_CRT_NONSTDC_NO_DEPRECATE&quot;;&quot;ENABLE_DEBUGGER_SUPPORT&quot;;&quot;V8_TARGET_ARCH_IA32&quot;;&quot;WIN32&quot;;&quot;V8_SHARED&quot;;&quot;USING_V8_SHARED&quot;;&quot;DEBUG&quot;;&quot;ENABLE_DISASSEMBLER&quot;;&quot;V8_ENABLE_CHECKS&quot;;&quot;OBJECT_PRINT&quot;"/><Tool AdditionalOptions="/ignore:4221" Name="VCLibrarianTool"/><Tool AdditionalDependencies="ws2_32.lib" FixedBaseAddress="1" GenerateDebugInformation="true" ImportLibrary="$(OutDir)\lib\$(TargetName).lib" LinkIncremental="2" MapFileName="$(OutDir)\$(TargetName).map" Name="VCLinkerTool" OutputFile="$(OutDir)\$(ProjectName).exe" SubSystem="1"/></Configuration><Configuration CharacterSet="1" ConfigurationType="1" IntermediateDirectory="$(OutDir)\obj\$(ProjectName)" Name="Release|Win32" OutputDirectory="..\build\$(ConfigurationName)"><Tool AdditionalIncludeDirectories="..\src;..\include" AdditionalOptions="/MP" BufferSecurityCheck="true" DebugInformationFormat="3" Detect64BitPortabilityProblems="false" DisableSpecificWarnings="4355;4800" EnableFunctionLevelLinking="true" EnableIntrinsicFunctions="true" ExceptionHandling="1" FavorSizeOrSpeed="0" InlineFunctionExpansion="2" MinimalRebuild="false" Name="VCCLCompilerTool" OmitFramePointers="true" Optimization="2" PreprocessorDefinitions="&quot;_CRT_SECURE_NO_DEPRECATE&quot;;&quot;_CRT_NONSTDC_NO_DEPRECATE&quot;;&quot;ENABLE_DEBUGGER_SUPPORT&quot;;&quot;V8_TARGET_ARCH_IA32&quot;;&quot;WIN32&quot;;&quot;V8_SHARED&quot;;&quot;USING_V8_SHARED&quot;" ProgramDataBaseFileName="$(IntDir)\$(ProjectName)\vc80.pdb" RuntimeLibrary="2" RuntimeTypeInfo="false" StringPooling="true" WarnAsError="true" WarningLevel="3"/><Tool AdditionalIncludeDirectories="..\src;..\include" Name="VCResourceCompilerTool" PreprocessorDefinitions="&quot;_CRT_SECURE_NO_DEPRECATE&quot;;&quot;_CRT_NONSTDC_NO_DEPRECATE&quot;;&quot;ENABLE_DEBUGGER_SUPPORT&quot;;&quot;V8_TARGET_ARCH_IA32&quot;;&quot;WIN32&quot;;&quot;V8_SHARED&quot;;&quot;USING_V8_SHARED&quot;"/><Tool AdditionalOptions="/ignore:4221" Name="VCLibrarianTool"/><Tool AdditionalDependencies="ws2_32.lib" EnableCOMDATFolding="2" FixedBaseAddress="1" GenerateDebugInformation="true" ImportLibrary="$(OutDir)\lib\$(TargetName).lib" LinkIncremental="1" MapFileName="$(OutDir)\$(TargetName).map" Name="VCLinkerTool" OptimizeReferences="2" OutputFile="$(OutDir)\$(ProjectName).exe" SubSystem="1"/></Configuration></Configurations><References/><Files><File RelativePath="d8.gyp"/><File RelativePath="d8.cc"/></Files><Globals/></VisualStudioProject>
+<?xml version="1.0" encoding="Windows-1252"?>
+<VisualStudioProject
+	ProjectType="Visual C++"
+	Version="9,00"
+	Name="d8"
+	ProjectGUID="{5DE3F6EE-47C8-CB26-B031-F8CC002701CA}"
+	RootNamespace="d8"
+	Keyword="Win32Proj"
+	TargetFrameworkVersion="0"
+	>
+	<Platforms>
+		<Platform
+			Name="Win32"
+		/>
+	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
+	<Configurations>
+		<Configuration
+			Name="Debug|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)\obj\$(ProjectName)"
+			ConfigurationType="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
+				Optimization="0"
+				AdditionalIncludeDirectories="..\src;..\include"
+				PreprocessorDefinitions="&quot;_CRT_SECURE_NO_DEPRECATE&quot;;&quot;_CRT_NONSTDC_NO_DEPRECATE&quot;;&quot;ENABLE_DEBUGGER_SUPPORT&quot;;&quot;V8_TARGET_ARCH_IA32&quot;;&quot;WIN32&quot;;&quot;V8_SHARED&quot;;&quot;USING_V8_SHARED&quot;;&quot;DEBUG&quot;;&quot;ENABLE_DISASSEMBLER&quot;;&quot;V8_ENABLE_CHECKS&quot;;&quot;OBJECT_PRINT&quot;"
+				MinimalRebuild="false"
+				ExceptionHandling="1"
+				RuntimeLibrary="3"
+				BufferSecurityCheck="true"
+				EnableFunctionLevelLinking="true"
+				RuntimeTypeInfo="false"
+				ProgramDataBaseFileName="$(IntDir)\$(ProjectName)\vc80.pdb"
+				WarningLevel="3"
+				WarnAsError="true"
+				Detect64BitPortabilityProblems="false"
+				DebugInformationFormat="3"
+				DisableSpecificWarnings="4355;4800"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="&quot;_CRT_SECURE_NO_DEPRECATE&quot;;&quot;_CRT_NONSTDC_NO_DEPRECATE&quot;;&quot;ENABLE_DEBUGGER_SUPPORT&quot;;&quot;V8_TARGET_ARCH_IA32&quot;;&quot;WIN32&quot;;&quot;V8_SHARED&quot;;&quot;USING_V8_SHARED&quot;;&quot;DEBUG&quot;;&quot;ENABLE_DISASSEMBLER&quot;;&quot;V8_ENABLE_CHECKS&quot;;&quot;OBJECT_PRINT&quot;"
+				AdditionalIncludeDirectories="..\src;..\include"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="ws2_32.lib"
+				OutputFile="$(OutDir)\$(ProjectName).exe"
+				LinkIncremental="2"
+				GenerateDebugInformation="true"
+				MapFileName="$(OutDir)\$(TargetName).map"
+				SubSystem="1"
+				FixedBaseAddress="1"
+				ImportLibrary="$(OutDir)\lib\$(TargetName).lib"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Release|Win32"
+			OutputDirectory="..\build\$(ConfigurationName)"
+			IntermediateDirectory="$(OutDir)\obj\$(ProjectName)"
+			ConfigurationType="1"
+			CharacterSet="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
+				Optimization="2"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="0"
+				OmitFramePointers="true"
+				AdditionalIncludeDirectories="..\src;..\include"
+				PreprocessorDefinitions="&quot;_CRT_SECURE_NO_DEPRECATE&quot;;&quot;_CRT_NONSTDC_NO_DEPRECATE&quot;;&quot;ENABLE_DEBUGGER_SUPPORT&quot;;&quot;V8_TARGET_ARCH_IA32&quot;;&quot;WIN32&quot;"
+				StringPooling="true"
+				MinimalRebuild="false"
+				ExceptionHandling="1"
+				RuntimeLibrary="0"
+				BufferSecurityCheck="true"
+				EnableFunctionLevelLinking="true"
+				RuntimeTypeInfo="false"
+				ProgramDataBaseFileName="$(IntDir)\$(ProjectName)\vc80.pdb"
+				WarningLevel="3"
+				WarnAsError="true"
+				Detect64BitPortabilityProblems="false"
+				DebugInformationFormat="3"
+				DisableSpecificWarnings="4355;4800"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="&quot;_CRT_SECURE_NO_DEPRECATE&quot;;&quot;_CRT_NONSTDC_NO_DEPRECATE&quot;;&quot;ENABLE_DEBUGGER_SUPPORT&quot;;&quot;V8_TARGET_ARCH_IA32&quot;;&quot;WIN32&quot;;&quot;V8_SHARED&quot;;&quot;USING_V8_SHARED&quot;"
+				AdditionalIncludeDirectories="..\src;..\include"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="ws2_32.lib winmm.lib"
+				OutputFile="$(OutDir)\$(ProjectName).exe"
+				LinkIncremental="1"
+				GenerateDebugInformation="true"
+				MapFileName="$(OutDir)\$(TargetName).map"
+				SubSystem="1"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				FixedBaseAddress="1"
+				ImportLibrary="$(OutDir)\lib\$(TargetName).lib"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+	</Configurations>
+	<References>
+	</References>
+	<Files>
+		<File
+			RelativePath=".\d8-debug.cc"
+			>
+		</File>
+		<File
+			RelativePath="..\build\Release\obj\global_intermediate\d8-js.cc"
+			>
+		</File>
+		<File
+			RelativePath="d8.cc"
+			>
+		</File>
+		<File
+			RelativePath="d8.gyp"
+			>
+		</File>
+	</Files>
+	<Globals>
+	</Globals>
+</VisualStudioProject>
