support for mksnapshot to work as a pintool.
This is needed to create a snapshoot  of the context WITH the PIN functions added, otherwise the runtime and inlined functions don't work.
This code runs correctly and generate the files but they're broken for some reason and the snapshot doesn't work, it would be nice to have it working but it's not mandatory, I switched to v8_nosnapshot_pin in the meantime.

--- a/tools/gyp/mksnapshot.vcproj
+++ b/tools/gyp/mksnapshot.vcproj
@@ -104,7 +104,7 @@
 			Name="Release|Win32"
 			OutputDirectory="../..\build\$(ConfigurationName)"
 			IntermediateDirectory="$(OutDir)\obj\$(ProjectName)"
-			ConfigurationType="1"
+			ConfigurationType="2"
 			CharacterSet="1"
 			>
 			<Tool
@@ -124,17 +124,17 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/MP"
+				AdditionalOptions="/MP /EHs- /EHa- /wd4530"
 				Optimization="2"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="0"
 				OmitFramePointers="true"
-				AdditionalIncludeDirectories="..\..\src"
-				PreprocessorDefinitions="&quot;_CRT_SECURE_NO_DEPRECATE&quot;;&quot;_CRT_NONSTDC_NO_DEPRECATE&quot;;&quot;ENABLE_DEBUGGER_SUPPORT&quot;;&quot;V8_TARGET_ARCH_IA32&quot;;&quot;WIN32&quot;"
+				AdditionalIncludeDirectories="..\..\src;../../include/;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\source\include;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\source\include\gen;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\source\tools\InstLib;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\extras\xed2-ia32\include;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\extras\components\include"
+				PreprocessorDefinitions="&quot;_CRT_SECURE_NO_DEPRECATE&quot;;&quot;_CRT_NONSTDC_NO_DEPRECATE&quot;;&quot;ENABLE_DEBUGGER_SUPPORT&quot;;&quot;V8_TARGET_ARCH_IA32&quot;;&quot;WIN32&quot;;TARGET_WINDOWS;BIGARRAY_MULTIPLIER=1;USING_XED;HOST_IA32;TARGET_IA32;_SECURE_SCL=0"
 				StringPooling="true"
 				MinimalRebuild="false"
-				ExceptionHandling="1"
+				ExceptionHandling="0"
 				RuntimeLibrary="0"
 				BufferSecurityCheck="true"
 				EnableFunctionLevelLinking="true"
@@ -159,19 +159,26 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib winmm.lib"
-				OutputFile="$(OutDir)\$(ProjectName).exe"
+				AdditionalOptions="/EXPORT:main /EXPORT:MyCreateThread"
+				AdditionalDependencies="pin.lib libxed.lib libcpmt.lib libcmt.lib pinvm.lib kernel32.lib ntdll-32.lib winmm.lib ws2_32.lib $(NOINHERIT)"
+				OutputFile="$(OutDir)\$(ProjectName).dll"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\ia32\lib;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\ia32\lib-ext;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\extras\xed2-ia32\lib"
 				GenerateManifest="false"
-				IgnoreAllDefaultLibraries="false"
+				IgnoreAllDefaultLibraries="true"
 				GenerateDebugInformation="true"
 				MapFileName="$(OutDir)\$(TargetName).map"
-				SubSystem="1"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				FixedBaseAddress="1"
-				ImportLibrary="$(OutDir)\lib\$(TargetName).lib"
+				SubSystem="0"
+				OptimizeReferences="0"
+				EnableCOMDATFolding="0"
+				EntryPointSymbol="Ptrace_DllMainCRTStartup@12"
+				BaseAddress="0x55000000"
+				RandomizedBaseAddress="0"
+				FixedBaseAddress="0"
+				DataExecutionPrevention="0"
+				ImportLibrary=""
 				TargetMachine="1"
+				ErrorReporting="0"
 			/>
 			<Tool
 				Name="VCALinkTool"
