--- a/tools/gyp/pin_threading.vcproj
+++ b/tools/gyp/pin_threading.vcproj
@@ -108,9 +108,12 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/EHs- /EHa- /wd4530"
-				Optimization="0"
-				EnableIntrinsicFunctions="false"
-				WholeProgramOptimization="false"
+				Optimization="2"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
+				OmitFramePointers="true"
+				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories="..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\source\include;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\source\include\gen;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\source\tools\InstLib;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\extras\xed2-ia32\include;..\..\third_party\pin-2.11-49306-msvc9-ia32_intel64-windows\extras\components\include"
 				PreprocessorDefinitions="TARGET_WINDOWS;BIGARRAY_MULTIPLIER=1;USING_XED;HOST_IA32;TARGET_IA32;_CRT_SECURE_NO_DEPRECATE;_SECURE_SCL=0;WIN32;$(NOINHERIT)"
 				ExceptionHandling="0"
@@ -139,7 +142,7 @@
 				GenerateDebugInformation="true"
 				OptimizeReferences="0"
 				EnableCOMDATFolding="0"
-				LinkTimeCodeGeneration="0"
+				LinkTimeCodeGeneration="1"
 				ImportLibrary="$(OutDir)\lib\$(TargetName).lib"
 				TargetMachine="1"
 			/>
