--- a/tools/gyp/v8.vcproj
+++ b/tools/gyp/v8.vcproj
@@ -128,7 +128,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
-				WholeProgramOptimization="true"
+				WholeProgramOptimization="false"
 				AdditionalIncludeDirectories="../../include/;&quot;..\..\third_party\pin-2.12-53271-msvc9-ia32_intel64-windows\source\include&quot;;&quot;..\..\third_party\pin-2.12-53271-msvc9-ia32_intel64-windows\source\include\gen&quot;;&quot;..\..\third_party\pin-2.12-53271-msvc9-ia32_intel64-windows\source\tools\InstLib&quot;;&quot;..\..\third_party\pin-2.12-53271-msvc9-ia32_intel64-windows\extras\xed2-ia32\include&quot;;&quot;..\..\third_party\pin-2.12-53271-msvc9-ia32_intel64-windows\extras\components\include&quot;;&quot;$(OutDir)\obj\global_intermediate\&quot;;../../src/;..\..\third_party\sorrow.js\src\"
 				PreprocessorDefinitions="&quot;_CRT_SECURE_NO_DEPRECATE&quot;;&quot;_CRT_NONSTDC_NO_DEPRECATE&quot;;&quot;ENABLE_DEBUGGER_SUPPORT&quot;;&quot;V8_TARGET_ARCH_IA32&quot;;&quot;WIN32&quot;;&quot;V8_SHARED&quot;;TARGET_WINDOWS;BIGARRAY_MULTIPLIER=1;USING_XED;HOST_IA32;TARGET_IA32;_SECURE_SCL=0"
 				StringPooling="true"
@@ -169,7 +169,7 @@
 				SubSystem="0"
 				OptimizeReferences="0"
 				EnableCOMDATFolding="0"
-				LinkTimeCodeGeneration="1"
+				LinkTimeCodeGeneration="0"
 				EntryPointSymbol="Ptrace_DllMainCRTStartup@12"
 				BaseAddress="0x55000000"
 				RandomizedBaseAddress="0"
@@ -245,6 +245,10 @@
 				</Filter>
 			</Filter>
 		</Filter>
+		<File
+			RelativePath="..\..\src\pin.js"
+			>
+		</File>
 		<File
 			RelativePath="..\..\third_party\sorrow.js\src\sorrow.cpp"
 			>
