threads handlers read/write memory helper functions registers spawn internal threads enable SSE2 instruction set on compilation

--- a/tools/gyp/v8_nosnapshot_pin.vcproj
+++ b/tools/gyp/v8_nosnapshot_pin.vcproj
@@ -127,6 +127,7 @@
 				RuntimeLibrary="0"
 				BufferSecurityCheck="true"
 				EnableFunctionLevelLinking="true"
+				EnableEnhancedInstructionSet="2"
 				RuntimeTypeInfo="false"
 				ProgramDataBaseFileName="$(IntDir)\$(ProjectName)\vc80.pdb"
 				WarningLevel="3"
