--- a/tools/gyp/pin_threading.vcproj
+++ b/tools/gyp/pin_threading.vcproj
@@ -119,6 +119,7 @@
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
+				EnableEnhancedInstructionSet="2"
 				ProgramDataBaseFileName="$(IntDir)\$(ProjectName)\vc80.pdb"
 				WarningLevel="3"
 				DebugInformationFormat="3"
