--- a/tools/gyp/v8.vcproj
+++ b/tools/gyp/v8.vcproj
@@ -137,6 +137,7 @@
 				RuntimeLibrary="0"
 				BufferSecurityCheck="true"
 				EnableFunctionLevelLinking="true"
+				EnableEnhancedInstructionSet="2"
 				ProgramDataBaseFileName="$(IntDir)\$(ProjectName)\vc80.pdb"
 				WarningLevel="3"
 				WarnAsError="true"
