simplified the context manager (it might disappear soon as we're just using the list of functions and list of contexts only). factorized all helper functions in a .h file for them only preparing everything to switch to use the contextswitcher for all events

--- a/tools/gyp/v8_nosnapshot_pin.vcproj
+++ b/tools/gyp/v8_nosnapshot_pin.vcproj
@@ -115,7 +115,7 @@
 				AdditionalOptions="/MP /EHs- /EHa- /wd4530"
 				Optimization="2"
 				InlineFunctionExpansion="2"
-				EnableIntrinsicFunctions="true"
+				EnableIntrinsicFunctions="false"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="false"
